# va3zza.com

./: .gitignore  404.html  Cargo.toml  README.md  _config.yml  config.toml  index.html  rss.xml  search_index.en.js  sitemap.xml
_posts/: 2022-04-14-welcome-to-jekyll.markdown
blog/: index.html
blog/2020-11-6-vortex-core/: index.html
blog/2020-12-4-galliumos/: index.html
blog/32u4-upload/: index.html
blog/amprnet-bgp/: index.html
blog/bashsmash/: index.html
blog/bazel-and-avr/: index.html
blog/becomeranter/: index.html
blog/billwurtz/: index.html
blog/brainfuckinbash/: index.html
blog/buildingimgfrombin/: index.html
blog/codespaces-for-frc/: index.html
blog/commit-sync/: index.html
blog/corepack-development/: index.html
blog/cron/: index.html
blog/devdns/: index.html
blog/direwolf-aprs/: index.html
blog/drivetrain-navigation/: index.html
blog/fedora-36-vp/: index.html
blog/frc-languages/: index.html
blog/frc-tech-reference/: index.html
blog/github-cleanup/: index.html
blog/googlectf/: index.html
blog/gopro-webcam/: index.html
blog/graphing-w2a/: index.html
contact/: index.html
content/: _index.md  contact.md  talks.md
donate/: index.html
events/: index.html
hobbies/: index.html
music/: index.html
network/: index.html
notes/: index.html
products/: index.html
projects/: index.html
retrylife/: index.html
scripts/: serve.sh
search/: index.html
server/: Cargo.toml  README.md
styles/: layout.css  project_mosaic.css
templates/: 404.html  base.html  index.html  page.html  section.html
(+74 files in other folders)
